--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,14 @@ jobs:
       with:
         dotnet-version: '3.1.102'
 
-    - name: Run tests
+    - name: Test stdlibs
       run: |
-        cd test
         ./run.sh fmt -test.v -test.run=^Test
         ./run.sh math -test.v -test.run=^Test
         ./run.sh math/bits -test.v -test.run=^Test
         ./run.sh sort -test.v -test.run=^Test
+    　working-directory: test
+
+    - name: Test binding
+      run: ./run.sh
+    　working-directory: test/binding
