--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,8 @@ jobs:
         ./run.sh math -test.v -test.run=^Test
         ./run.sh math/bits -test.v -test.run=^Test
         ./run.sh sort -test.v -test.run=^Test
+        ./run.sh sync -test.v -test.run=^Test
+        ./run.sh sync/atomic -test.v -test.run=^Test
 
     - name: Test binding
       working-directory: test/binding
