--- a/example/binding/binding.csproj
+++ b/example/binding/binding.csproj
@@ -6,4 +6,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="autogen\MemInitData">
+      <LogicalName>Go2DotNet.Example.Binding.AutoGen.MemInitData</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
