--- a/example/monogame/monogame.csproj
+++ b/example/monogame/monogame.csproj
@@ -20,4 +20,10 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="autogen\MemInitData">
+      <LogicalName>Go2DotNet.Example.MonoGame.AutoGen.MemInitData</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
