--- a/test/stdlib/stdlib.csproj
+++ b/test/stdlib/stdlib.csproj
@@ -6,4 +6,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="autogen\MemInitData">
+      <LogicalName>Go2DotNet.Test.StdLib.AutoGen.MemInitData</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
