--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
 
     - uses: actions/setup-go@v1
       with:
-        go-version: 1.14
+        go-version: 1.15beta1
       id: go
     - uses: actions/checkout@v2
 
@@ -29,6 +29,7 @@ jobs:
         ./run.sh runtime/internal/math -test.v -test.run=^Test
         ./run.sh runtime/internal/sys -test.v -test.run=^Test
         ./run.sh sort -test.v -test.run=^Test
+        ./run.sh sync -test.v -test.run=^Test
         ./run.sh sync/atomic -test.v -test.run=^Test
 
     - name: Test binding
