--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
 
     - uses: actions/setup-go@v1
       with:
-        go-version: 1.15beta1
+        go-version: 1.15.2
       id: go
     - uses: actions/checkout@v2
 
