--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install libglew-dev
+        sudo apt-get install libgl1-mesa-dev
 
     - uses: actions/setup-go@v1
       with:
