--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,6 +25,7 @@ jobs:
         ./run.sh fmt -test.v -test.run=^Test
         ./run.sh math -test.v -test.run=^Test
         ./run.sh math/bits -test.v -test.run=^Test
+        ./run.sh runtime -test.v -test.short -test.run=^Test
         ./run.sh runtime/internal/atomic -test.v -test.run=^Test
         ./run.sh runtime/internal/math -test.v -test.run=^Test
         ./run.sh runtime/internal/sys -test.v -test.run=^Test
