--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,13 +22,13 @@ jobs:
     - name: Test stdlib
       working-directory: test/stdlib
       run: |
-        ./run.sh fmt -test.v -test.run=^Test
-        ./run.sh math -test.v -test.run=^Test
-        ./run.sh math/bits -test.v -test.run=^Test
-        ./run.sh runtime -test.v -test.short -test.run=^Test
-        ./run.sh runtime/internal/atomic -test.v -test.run=^Test
-        ./run.sh runtime/internal/math -test.v -test.run=^Test
-        ./run.sh runtime/internal/sys -test.v -test.run=^Test
-        ./run.sh sort -test.v -test.run=^Test
-        ./run.sh sync -test.v -test.run=^Test
-        ./run.sh sync/atomic -test.v -test.run=^Test
+        ./run.sh fmt -test.v
+        ./run.sh math -test.v
+        ./run.sh math/bits -test.v
+        ./run.sh runtime -test.v -test.short
+        ./run.sh runtime/internal/atomic -test.v
+        ./run.sh runtime/internal/math -test.v
+        ./run.sh runtime/internal/sys -test.v
+        ./run.sh sort -test.v
+        ./run.sh sync -test.v
+        ./run.sh sync/atomic -test.v
