Use the short mode in math/big
TestLinkerGC doesn't work due to lstat and exec.Command.

Updates #21

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         ./run.sh fmt -test.v
         ./run.sh math -test.v
-        ./run.sh math/big -test.v
+        ./run.sh math/big -test.v -test.short # TestLinkerGC doesn't work (#21)
         ./run.sh math/bits -test.v
         ./run.sh math/cmplx -test.v
         ./run.sh math/rand -test.v
